    2/ for data base name change (gwf file field "renamed") and
    3/ detected robot exclusion (when option -robot_xcl has been set).
  - [Aug 13, 99] Fixed bug: when merging persons, the "other relations" where
    not included.
  - [Aug 8, 99] Added option "-redirect" to say to the users that the
    GeneWeb service has been redirected to some other address.

GeneWeb version 2.05
--------------------

* General
  - [Aug 4, 99] In the distribution main directory, files README.txt (English)
    and LISEZMOI.txt (French), added a few lines of explanations for starting
    with GeneWeb.
  - [Jul 15, 99] Changed internal representation of strings in data bases.
    Should not make any differences while browsing. However, as it is a major
    internal change in the program, problems may appear (mainly in displaying
    or in access by name, first name, surname, title...): please report if any
    problem.

* Setup program
  - [Jul 18, 99] Added in the menu "data base parameters" the ability to
    display the characters in the pages 1/ in bold, 2/ in italic, 3/ in
    smaller or bigger size (using the new key 'enclosing_tag': see below
    section "base configuration files"). Bold is useful, for example, if
    a background image is used, to make the text more readable. [Spanish
    version not yet translated]
  - [Jul 15, 99] Changed GEDCOM export menu to reflect new option "-charset"
    of "gwb2ged" (see below in section "GeneWeb to Gedcom").
  - [Jul 2, 99] Fixed bug: importing GeneWeb base from old version passing
    by a GEDCOM file did not work if the current directory held spaces.
  - [Jul 2, 99] Changed names of html files to hold 8 characters maximum
    and 3 characters for the extension, to be unzippable by "pkunzip".

* GeneWeb Daemon/CGI (gwd)
  - [Aug 6, 99] Changed order of menu in "update page": separated "delete"
    from "modify".
  - [Aug 6, 99] Restored the system of robot exclusion (had been deleted